--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,55 @@
+accelerate==0.24.1
+async-timeout==4.0.3
+blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 comtypes==1.2.0
-Flask==3.0.0
-Flask_Cors==4.0.0
-mediapipe==0.10.7
-opencv_contrib_python==4.8.1.78
-opencv_python==4.8.1.78
-psutil==5.9.5
+dlib==19.24.2
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+filelock==3.13.1
+flask==3.0.0
+fsspec==2023.10.0
+huggingface-hub==0.17.0
+idna==3.4
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.1
+opencv-contrib-python==4.8.1.78
+opencv-python==4.8.1.78
+packaging==23.2
+Pillow==10.1.0
+playsound==1.3.0
+psutil==5.9.6
+PyAudio==0.2.14
 pycaw==20230407
 pydub==0.25.1
+pypiwin32==223
 python-dotenv==1.0.0
 pyttsx3==2.90
-Requests==2.31.0
-screen_brightness_control==0.22.1
+pywin32==306
+PyYAML==6.0.1
+redis==5.0.1
+regex==2023.10.3
+requests==2.31.0
+safetensors==0.4.0
+screen-brightness-control==0.22.1
+six==1.16.0
 SpeechRecognition==3.10.0
+spotipy==2.23.0
+sympy==1.12
+tokenizers==0.14.1
+torch==2.1.0
+tqdm==4.66.1
+transformers==4.35.0
+typing-extensions==4.8.0
+urllib3==2.0.7
+werkzeug==3.0.1
+WMI==1.5.1
+zipp==3.17.0
